--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "lodash": "3.0.1",
     "underscore": "~1.8.3",
     "js-image-tiles": "https://github.com/toddnestor/js-image-grid.git",
-    "angular-bootstrap": "^1.2.5"
+    "angular-bootstrap": "^1.2.5",
+    "angular-dragdrop": "^1.0.13"
   },
   "devDependencies": {},
   "resolutions": {
