--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "ngstorage": "~0.3.10",
     "angular-xeditable": "~0.1.9",
     "moment": "~2.10.6",
-    "angular-notify": "~2.5.0",
+    "angular-notify": "^2.5.0",
     "angular-ui-sortable": "~0.13.4",
     "angular-sweetalert": "latest",
     "clipboard": "~1.5.5",
