--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,9 @@
     "angular-bootstrap": "^1.2.5",
     "angular-dragdrop": "^1.0.13",
     "angular-animate": "^1.5.3",
-    "angular-spectrum-colorpicker": "^1.4.5"
+    "angular-spectrum-colorpicker": "^1.4.5",
+    "ng-file-upload-shim": "^12.0.4",
+    "ng-file-upload": "^12.0.4"
   },
   "devDependencies": {},
   "resolutions": {
